fix vertical alignment, remove women section

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,5 @@
 .body-container {
-  padding: 10px 10px 100vh 10px;
+  padding: 10px 10px 10vh 10px;
   margin: -10px -10px -10px -10px;
 
   flex-direction: column;
@@ -48,6 +48,8 @@
 
 .image-frame {
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 nav {
